--- a/_posts/2014-12-24-podcats.markdown
+++ b/_posts/2014-12-24-podcats.markdown
@@ -13,7 +13,7 @@ title: Podcats
 subtitle: Discover podcasts you love
 summary: 
   title: "Podcats: A passion project"
-  content: "Podcats is a passion project to help find better podcasts. Made together with Niels de Hoog, we sought to build a community forum where people could reccomend podcasts to eachother. Having found that we found out about most podcasts via friends, we simply sought to create a digital hub for the practice."
+  content: "Podcats is a passion project to help people find new podcasts to listen to. Made in collaboration with [Niels de Hoog](https://github.com/njdehoog), we sought to build a community forum where people could reccomend podcasts to eachother. Having found that we found out about most podcasts via friends, we simply created a digital hub for the practice."
 website:
   title: Podcats site
   url: "http://podcatsapp.com"
@@ -21,27 +21,132 @@ website:
 # Meta info
 meta:
   tasks: "UI, UX, Concept"
-  type: iOS app
+  type: an iOS app
   duration: "~ 1 year on nights and weekends"
 
 # Style information
 color: "#E35050"
 ---
 
+
+
+### TL:DR Making your own app is lotsa work
+
+
 ### The problem
 
-Podcasts are a great medium with an astonishing variety of content out there, however finding good content is difficult. iTunes, the podcast hub, does provide a top list, but this list generally remains unchanged for months/years at a time. Popular podcasts remain popular, new guys don’t even stand a chance. 
+For those who aren't aware, podcasts are basically a radio show, tailored to your interests, delieved straight to your phone every week (or month, or day..). If you can think of a subject, there is probably a podcast about it. Anyone can make a podcast, and podcasts often develop loyal (rabid) followings, as listeners develop a "best friend you've never actually spoken to" personal relationship with the creators.
+
+iTunes, the main podcast place where podcasts live, does provide a top list of interesting podcasts, but this list generally remains unchanged for months/years at a time with the big podcast players. Popular podcasts remain popular, new guys don’t even stand a chance. Podcast listeners generally have a list of their favorites, but it's difficult to discover new podcasts outside of your bubble. 
+
+Furthermore, the discoverability of new podcasts through iTunes is wedged somewhere between 'absymal' and 'completely useless'. Think of all of the amazing stuff you aren't hearing!
 
 ![iTunes Top Podcasts](/assets/images/posts/podcats_problem.png "iTunes Top Podcasts")
 
 ### Concept
 
-Podcasts are a great medium with an astonishing variety of content out there, however finding good content is difficult. iTunes, the podcast hub, does provide a top list, but this list generally remains unchanged for months/years at a time. Popular podcasts remain popular, new guys don’t even stand a chance. 
+When I was but a baby podcast listener, I found my podcasts via iTunes like the rest of the noobs. After professing my newfound love for podcasts to friends, I soon had a long list of requests pouring in that were even better than what I found on iTunes. I realized that there was an inexhaustable list of podcasts floating out there in the abyss. Unfortunatley for me, I do have an exhaustable amount of friends. 
+
+Thus, Podcats was born. Podcats is in essence, a way for anyone to say "hey, I like this podcast, you might too".
 
 ![Podcats sketch](/assets/images/posts/podcats_concept.png "Podcats sketch")
 
-### Wireframing
+### Execution
+
+We decided early on to make an app (as opposed to a website, a platform...) because in our experience podcasts are generally listened to via a smartphone. Anecdotally, we know people listen to podcasts on their commute to work, to make cleaning less boring, etc. We had not heard of anyone sitting behind their computer and listening to a podcast. Even Apple's own podcast app is only available for the iPhone and iPad. 
+
+We chose to make an iPhone only app for the simple reason that our programming expertise doesn't extend to Andriod development. We're also both iOS users, and we were making the app for our own use as well. Sorry Android users, perhaps someday you'll have Podcats too...
+
+![Apple's podcast app](/assets/images/posts/itunes.jpg "Apple's podcast app")
+
+
+### Keep it simple, dumbass
+
+After the bud of an idea was there, it was up to Niels and I to decide what was feasible. Seasoned app developers as we were, we still had full time jobs and social lives to contend with. We tried to decifer what was the minimum viable product could be to build an app with enough to captivate users but not so much that we'd have to work on it for a hundred years before it came out. The core of the idea was the ability to reccomend podcasts to eachother, and everything else was secondary. So at it's core, the app had to:
+
+- Display reccomendations from other people
+- Accept reccomndations to display
+
+A tried and tested application of this mechanic is Reddit/Hacker News/Product Hunt: a user can submit something, and all other users get one vote on whether or not it's good. What that results in is a list of content that the community finds interesting. Perfect for our concept! I'm a strong proponent of not reinventing the wheel when it comes to technology, so we happily stole this mechanic for Podcats. The Reddit mechanic did add one more must have feature:
+
+- The ability (but not obligation) to log in
+
+Why a login? Users can only have vote, so we need to be able to track if you've already voted or not. We could do this based on device (though Apple is admittedly not a fan of that practice), but it seemed to have more longevity to create a login: it opens the door to new features in a future release, and doesn't punish the user for changing devices.
+
+After we had established clearly what the app must do, it was time for me to get those ideas on paper.
+
+![MVP list](/assets/images/posts/mvp.jpg "MVP")
+
+
+### Interaction Design 
+
+I generally start my interaction design process on paper so that I can quickly get ideas on out of my head. What that looks like are not the beautiful interfaces sketches of Dribbble, but rather the rantings of a crazy person. Speed takes precedence over beauty in this stage.
+
+I try to sketch out the most obvious ideas first, just to get it out of the way. That's not to imply that obvious ideas are wrong, but often obvious means I've seen it somewhere else, it was designed to solve another problem and will need some iteration before it could suffice. 
+
+![First Sketches](/assets/images/posts/IxD.JPG "First Sketches")
+
+
+After the obvious ideas, I try to think something completely different (i.e. what if this interface was gesture only, no buttons allowed? or: what if this app had no typography in it?) These small exercises force me to think of unconventional ways of laying out the interface and prevent the designs from being stale. I almost never use them in full as an interaction, but the often lead to little elements the make it into the final designs.
+
+I also try to think of the worst possible solutions, as an though exercise. When making something intentionally bad, you need to be aware why it wouldn't work. So in inverse way, you are considering the users needs. It's quite obvious, but it often leads to new insights or at least serve to support the other interaction designs.
+
+When everything is physical, it's simple to move things around, (literally) rip pieces of one idea and paste them on another, or quickly make notes here or there. From there it's edit, edit, edit. I try to distill all of the sketches into something that could be functional app on paper. After a few iterations of solving the most obvious issues, I make a digital first draft interaction design to more easily communciate it with other people. 
+
+![Podcats wireframes](/assets/images/posts/podcats_wireframes.png "Podcats wireframes")
+![Final wireframes](/assets/images/posts/IxDv2.png "Final wireframes")
+
+
+### Prototyping
+
+I strongly, strongly, shout-it-from-the-mountain-tops strongly believe in the importance of prototyping. Normally my old favorite is Pop, for it's simplicity and how quickly I can test the basics on the device. More recently, I discovered prototyping in Keynote, which nearly as fast as Pop, but with the benefit of being able to prototype pretty complex animations with ease. For more high fidelity prototyping, I usually jump straight native iOS development. With such a small team, we didn't focus that much on a step by step process or keeping things really formal when building Podcats. I made a first draft of an interaction design, showed it to Niels, we made some verbal agreements and he started building away. Pretty quickly, we saw the pain points in the interaction design and could just shout out some ideas. Niels would implement them, and then we'd see if it felt right. 
+
+Because of our informal process, the design and development process blurred together significantly. Sometimes it felt like this:
+![Laying track](/assets/images/posts/track.gif "Laying track")
+
+But it also felt good, there's no sense in spending a week perfecting a design only to find out that it works terribly.
+
+
+### Visual design iterations
+
+The first iterations of Podcats were SO BAD and I would love to put them on the internet for you to laugh at. Unfortunatley, being new at Sketch, I had the habit (then) of just working in one artboard and saving over it a hundred times thus I lost the earliest versions like an idiot. Only later in the process did I discover the magic of multiple artboards and so can only show you the last few iterations.
+
+### The final design
+
+We wanted Podcats to be a very minimalistic app that put a lot of focus on:
+1. reading
+2. encouraging users to vote on content
+
+Focus on reading was solved by placing heavy contrast on text and allow there to be enough whitespace to not get overwhelmed by the large amounts of texts. Contrast was lowered for less important text. 
+
+I encourage users to vote by placing a large number right next to the content with a bright accent color to draw the eye.
+
+![Tutorial](/assets/images/posts/Final0.png "Tutorial")
+![Home screen](/assets/images/posts/Final1.png "Home screen")
+![Detail screen](/assets/images/posts/Final2.png "Detail screen")
+
+
+### Testing 123
+
+Podcasts are a great medium with an astonishing variety of content out there, however finding good content is difficult. iTunes, the podcast hub, does provide a top list, but this list generally remains unchanged for months/years at a time. Popular podcasts remain popular, new guys don’t even stand a chance. 
+![Testers](/assets/images/posts/testing.png "Testers")
+![Survey](/assets/images/posts/survey.png "Survey")
+
+
+### SHIP IT!
+
+###Hindsight in 20/20
+
+![Hindsight](/assets/images/posts/usage.png "Hindsight")
+
+### That name though
 
 Podcasts are a great medium with an astonishing variety of content out there, however finding good content is difficult. iTunes, the podcast hub, does provide a top list, but this list generally remains unchanged for months/years at a time. Popular podcasts remain popular, new guys don’t even stand a chance. 
 
-![Podcats wireframes](/assets/images/posts/podcats_wireframes.png "Podcats wireframes")
+![Icon](/assets/images/posts/icon.png "Icon")
+
+
+### Tooling
+
+Podcasts are a great medium with an astonishing variety of content out there, however finding good content is difficult. iTunes, the podcast hub, does provide a top list, but this list generally remains unchanged for months/years at a time. Popular podcasts remain popular, new guys don’t even stand a chance. 
+
